; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libsecureboot/extr_veta.c_trust_file_add.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libsecureboot/extr_veta.c_trust_file_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @trust_file_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @trust_file_add(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32* @read_certificates(i8* %5, i64* %4)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = load i64, i64* %4, align 8
  %12 = call i64 @ve_trust_anchors_add(i32* %10, i64 %11)
  store i64 %12, i64* %4, align 8
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i64, i64* %4, align 8
  ret i64 %14
}

declare dso_local i32* @read_certificates(i8*, i64*) #1

declare dso_local i64 @ve_trust_anchors_add(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
